--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
 body {
     background-color: beige;
 }
+
+.dino-cards {
+    background-color: black;
+    color: white;
+    width: 200px;
+    text-align: center;
+}
